package protocol;


message SCGateInfo {
	optional int32 SrvType = 1;
	optional int32 SrvId = 2;
	optional string AuthKey = 3;
	optional string Ip = 4;
	optional int32 Port = 5;
}

message CSSessionBundle {
	required string Key = 1;
	required int64 Ts = 2;
}

message CSSessionAck {
	required uint32 LogicNo = 1;
}